13-kubernetes-troubleshooting/issues/containercreating.yaml
apiVersion: "v1"
kind: "Pod"
metadata:
  name: "mount-error"
spec:
  containers:
    -
      name: "main"
      image: "busybox:1.37"
      command:
        - "sh"
        - "-c"
        - "sleep 3600"
      volumeMounts:
        -
          name: "config"
          mountPath: "/config"
  restartPolicy: "Never"
  volumes:
    -
      name: "config"
      configMap:
        name: "missing-config"
