13-kubernetes-troubleshooting/issues/dns.yaml
apiVersion: "v1"
kind: "Pod"
metadata:
  name: "bad-dns"
spec:
  containers:
    -
      name: "main"
      image: "busybox:1.37"
      command:
        - "sh"
        - "-c"
        - "sleep 3600"
  restartPolicy: "Never"
  dnsPolicy: "None"
  dnsConfig:
    nameservers:
      - "192.0.2.1"
