13-kubernetes-troubleshooting/issues/pending.yaml
apiVersion: "v1"
kind: "Pod"
metadata:
  name: "pending"
spec:
  containers:
    -
      name: "main"
      image: "busybox:1.37"
      command:
        - "sh"
        - "-c"
        - "sleep 3600"
  restartPolicy: "Never"
  nodeSelector:
    homework/nonexistent: "true"
