13-kubernetes-troubleshooting/issues/networkpolicy.yaml
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "deny-app"
spec:
  podSelector:
    matchLabels:
      app: "troubleshooting-app"
  policyTypes:
    - "Ingress"
  ingress: []
